<?xml version="1.0"?>
<package format="2">
  <name>topic_switch</name>
  <version>0.0.1</version>
  <description>The topic_switch package</description>

  <maintainer email="masaya@todo.todo">Masaya Kataoka</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>ros_type_introspection</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>ros_type_introspection</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>ros_type_introspection</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
